--- a/Bridge knowedge gap.ipynb
+++ b/Bridge knowedge gap.ipynb
@@ -32,12 +32,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    ""
+    "# String method (s: string   c: character in s)\n",
+    "## s.count(c): counts appearance of c \n",
+    "Time complexity: O(n)\n",
+    "## s.index(c): return index of c\n",
+    "Time complexity: O(n)"
    ]
   }
  ],
